@startuml

package vues{
    interface StrategieModeAffichage{
        genererAffichage(Modele): Pane
    }

    interface Observateur{
        actualiser():void
    }

    class VueListes{
        - colonnes:Map<TacheComposite, String>
        - table:TableView<TacheComposite>
        - nomColonnes:ObservableList<String>
        - instance : VueListes


        + VueListes()
        + genererAffichage(Modele): Pane
        + getInstance(): VueListes
        - creeTable():void
        - deplacerTache(TacheComposite, String, String):void
        - gestionAjout(): void
        - gestionArchive(Tache): void
        - gestionModification(Tache): void
    }

    class VueTaches{
        + VueTaches(Modele)
        + actualiser():void
        + setModeAffichage(StrategieModeAffichage):void
    }

    class PopupAddTache{
        +display(Modele, Colonne): void
    }

    class PopupEditTache{
        + display(Modele, Tache): void
    }

    class PopupArchive{
        + display(Modele): void
    }
}

class Modele{}

class VBox{}

class ControleurAjouterTache{}

class ControleurModifierTache{}

VueListes ..|> StrategieModeAffichage
VueListes --> "1" Modele:model
VueListes --|> VBox
VueListes ...> "<<use>>" PopupAddTache
VueListes ...> "<<use>>" PopupEditTache


VueTaches ..|> Observateur
VueTaches --> "1" StrategieModeAffichage:modeAffichage
VueTaches --> "1" Modele:model

PopupAddTache ...> "<<use>>" ControleurAjouterTache
PopupEditTache ...> "<<use>>" ControleurModifierTache

@enduml